--- a/hook/build
+++ b/hook/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker build --build-arg ES_VERSION=$SOURCE_BRANCH --build-arg IK_VERSION=$SOURCE_BRANCH -t $IMAGE_NAME .
+docker build --build-arg ES_VERSION=$SOURCE_COMMIT --build-arg IK_VERSION=$SOURCE_COMMIT -t $IMAGE_NAME .
